# investment-team

./: .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  example.env  pyproject.toml  requirements.txt
agents/: __init__.py  committee_chair.py  financial_analyst.py  knowledge_agent.py  market_analyst.py  memo_writer.py  risk_officer.py  technical_analyst.py  tracing.py
app/: main.py
db/: url.py
scripts/: railway_up.sh
teams/: broadcast_team.py  coordinate_team.py  route_team.py  task_team.py
